# gameconsole

./: add_game.js  controller.c  installer.c  storage.c
add game/: add_game_files.js  add_games.html
apps/album/: album.py
browser/: CMakeLists.txt  index.html  main.js  package.json  preload.js  py_browser.py  renderer.js  style.css  tab-preload.js
browser/cmake/: main.cpp
code/: index.html  node.js
connect/: device_connect.py
controller/: sync_controller.py
data/: device_data_collecter.py
hardware/: screen_connect.c  screen_sharing.c
hardware/MircoSD/: transfertoSD.py
hardware/battery/: bc.py  bms.py
hardware/modes/: airplane_mode.c  bluetooth.py
hardware/s&b/: os_brightness.py  sound_controller.py  sound_controlpy
software/: installer.c
time/: timezones.py
wifi/: wifi_manager.py
